--- a/sdi-project4.html
+++ b/sdi-project4.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 4 :: SDI TERMNUMBER</title>
-    <link rel="stylesheet" href="sdi.css" type="text/css" />
+    <title>David Clark :: Project 4 :: 1207</title>
+    <link rel="stylesheet" href="css/sdi-project4.css" type="text/css" />
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>1207: David Clark</h1>
     <h2>Project 4</h2>
 </header>
 <article>
 <p>You don't need to put anything here for this project.  Though you can if you want to!</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>07/26/12, David Clark</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="js/Clark_David_Assignment4.js"></script>
 </body>
 </html>
